# khors-ray-tracer

./: CMakeLists.txt  README.md
assets/shaders/: cs.comp  fs.frag  gl_res_sampling.comp  intersection.glsl  light_sample.glsl  pathtracing.glsl  res_sampling.comp  res_shade.comp  rt_payload.glsl  shading.glsl  spat_reuse.comp  structs.glsl  temp_reuse.comp  tracingres.glsl  uniforms.glsl  vk_fs.frag  vk_res_sampling.comp  vk_res_sampling.rchit  vk_res_sampling.rchit.glsl  vk_res_sampling.rgen  vk_res_sampling.rgen.glsl  vk_res_sampling.rmiss  vk_res_shade.comp  vk_res_shade.rchit  vk_res_shade.rchit.comp  vk_res_shade.rgen  vk_res_shade.rgen.comp  vk_res_shade.rmiss  vk_res_shade.rmiss.comp  vk_res_shade_refl.rmiss  vk_spat_reuse.comp  vk_temp_reuse.comp  vk_vs.vert  vs.vert  wrs.glsl
assets/shaders/include/: hash.glsl  intersection.glsl  rt_shadow_payload.glsl  shading.glsl  tracingres.glsl  vk_uniforms.glsl
assets/shaders_gl/: cs.comp  gl_temp_reuse.comp  gl_vs.vert
src/: main.cpp
src/app/: light_widget.h  mat_widget.h  obj_widget.h  scene_widget.h  ui_manager.h  widget.h  window.cpp  window.h
src/core/math/: mat3.h  mat4.h  vec2.h  vec3.h  vec4.h
src/render/: comp_shader.cpp  comp_shader.h  gpu_timer.h  renderer.cpp  renderer.h  renderer_factory.h  shader.cpp  shader.h  vk_gpu_timer.h
src/render/gl/: gl_renderer.cpp  gl_renderer.h
src/render/vk/: vk_buffer.cpp  vk_buffer.h  vk_cmanager.cpp  vk_cmanager.h  vk_comp_pipeline.cpp  vk_comp_pipeline.h  vk_debugger.cpp  vk_debugger.h  vk_device.cpp  vk_device.h  vk_g_pipeline.h  vk_pipeline.h  vk_pipeline_builder.h  vk_renderer.cpp  vk_renderer.h  vk_rt_pipeline.h  vk_swapchain.cpp  vk_swapchain.h  vk_texture.cpp  vk_texture.h
src/render/vk/managers/: vk_cmanager.cpp  vk_cmanager.h  vk_descriptor.cpp  vk_descriptor.h  vk_device.cpp  vk_device.h  vk_shaderc.cpp  vk_shaderc.h  vk_swapchain.h
src/render/vk/pipeline/: vk_comp_pipeline.cpp  vk_comp_pipeline.h  vk_g_pipeline.cpp  vk_g_pipeline.h  vk_pipeline.cpp  vk_pipeline.h  vk_rt_pipeline.cpp  vk_rt_pipeline.h
src/render/vk/structs/: vk_accelstruct.cpp  vk_accelstruct.h  vk_buffer.cpp
src/scene/: camera.cpp  camera.h  light.h  object.cpp  object.h  rs_obj_parser.cpp  rs_obj_parser.h  scene.cpp  scene.h  scene_parser.cpp  scene_parser.h  textures.cpp  textures.h
src/util/: app_util.h  benchmark.cpp  benchmark.h  config.cpp  config.h  glsl_util.cpp  glsl_util.h  image_util.cpp  image_util.h
static/: plot_benchmark.py  test_obj2.mtl
static/benchmark_results/: bvh2_1024.csv  bvh2_128.csv  bvh2_16.csv  bvh2_2048.csv  bvh2_256.csv  bvh2_32.csv  bvh2_4096.csv  bvh2_512.csv  bvh2_64.csv  bvh_1024.csv  bvh_128.csv  bvh_16.csv  bvh_2048.csv  bvh_256.csv  bvh_32.csv  bvh_4096.csv  bvh_512.csv  bvh_64.csv  naive_1024.csv  naive_128.csv  naive_16.csv  naive_2048.csv  naive_256.csv  naive_32.csv  naive_4096.csv  naive_512.csv  naive_64.csv  x16y16.csv  x16y4.csv  x16y8.csv  x32y16.csv  x32y8.csv  x8y4.csv  x8y8.csv
